vindskjerming/src/app/components/canvas/wall/wall.component.scss
.row {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.pointer {
  cursor: pointer;
}

.wallmount {
  width: 6px;
}

.post {
  width: 12px;

  .base {
    position: relative;
    width: 20px;
    height: 6px;
    background-color: black;
    left: -4px;
    top: 100%;
  }
}

.glass {
  .item {
    border-top: 0 solid transparent;
    border-left: 0 solid transparent;
    border-right: 0 solid transparent;
  }

  p {
    position: relative;
    text-align: center;
  }
}

.length-bar-container {
  .length-bar {
    width: 100%;
    height: 5px;
    background-color: var(--black);
    margin-top: 1rem;

    .end {
      position: relative;
      width: 4px;
      height: 15px;
      background-color: var(--black);
      top: -5px;
    }

    .left {
      left: 0;
    }

    .right {
      top: -20px;
      left: calc(100% - 4px);
    }
  }

  p {
    text-align: center;
  }
}

.space-between {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.modal-container {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(black, 0.2);
  z-index: 1000;
  animation: fadeIn 200ms;

  .modal-body {
    position: relative;
    margin: auto;
    padding: 2rem;
    width: fit-content;
    max-width: 100%;
    max-height: 80%;
    background-color: white;
    border-radius: 1rem;
    animation: slideUp 200ms ease-out;

    .inputs {
      display: flex;
      flex-direction: column;
      gap: 1rem;

      input {
        margin-left: 1rem;
      }
    }

    .buttons {
      margin-top: 2rem;
      padding-top: 1rem;
      border-top: 1px solid gray;
    }
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes slideUp {
  0% {
    transform: translateY(50px);
  }

  100% {
    transform: translateY(0px);
  }
}

